--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "supertest": "^6.3.3"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.4.4"
+    "express-async-errors": "^3.1.1",
+    "mongoose": "^7.4.4",
+    "mongoose-unique-validator": "^4.0.0"
   },
   "jest": {
     "testEnvironment": "node",
