--- a/package.json
+++ b/package.json
@@ -1,21 +1,28 @@
 {
   "name": "bloglist-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "https://bloglist-backend-vscb.onrender.com",
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
-    "lint": "eslint .",
-    "start:test": "cross-env NODE_ENV=test node index.js"
+    "lint": "eslint . --fix",
+    "start:test": "cross-env NODE_ENV=test node index.js",
+    "format": "prettier -w ."
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^8.48.0",
+    "eslint": "^8.53.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jest": "^27.6.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "jest": "^29.6.4",
     "nodemon": "^3.0.1",
+    "prettier": "^3.1.0",
     "supertest": "^6.3.3"
   },
   "dependencies": {
@@ -32,5 +39,17 @@
   "jest": {
     "testEnvironment": "node",
     "globalTeardown": "./tests/teardown.js"
-  }
+  },
+  "directories": {
+    "test": "tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sjq1412/bloglist-backend.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/sjq1412/bloglist-backend/issues"
+  },
+  "homepage": "https://github.com/sjq1412/bloglist-backend#readme"
 }
